public/main.css
  html,body{
    height: 100%;
    width: 100%;
    margin: 0;
    padding: 0;
    font-family: Montserrat;
    background-color: white;
    box-sizing: border-box
}
/* Hide scrollbar for Chrome, Safari and Opera */
html::-webkit-scrollbar {
    display: none;
  }
  
  /* Hide scrollbar for IE and Edge */
  html {
    -ms-overflow-style: none;
  }

@media only screen and (max-width: 1000px) {
     .glasses{
        /* visibility: hidden; */
        position: absolute;
        top:20rem !important;
        right: 0;
        left:0;
        z-index: 1;
        display: flex;
        justify-content: center;
        margin-top: 0;
    }
    .glasses img{

        /* width: 95vw; */

    }
     .book{
        visibility: hidden;
    }
    .containerf .back p{
        font-size: 1rem;
    
    }
    .section{
        padding-top:10rem;
    }
   
  }
  
  @media only screen and (max-width: 1200px) {
    .text{
        
        position: absolute;
        top:60% !important;
        -webkit-text-stroke-color:white;
        -webkit-text-stroke-width: 0.5px;
        font-size:1.5rem !important;
        font-weight: 700;
        display: flex;
        justify-content: center;
        left: 0 !important;
        right: 0 !important;
    }
    .projectslides .glide__slide--active{

        transform: scale(0.5);
        /* margin: 0 100px; */
    }
 }
 @media only screen and (max-width: 480px) {
    .glasses{
        /* visibility: hidden; */
        position: absolute;
        top:15rem !important;
        right: 0;
        left:0;
        z-index: 1;
        display: flex;
        justify-content: center;
        margin-top: 0;
    }
 }
 /* @media only screen and (max-width: 1200px) {
    .glasses img{
       visibility: hidden;
   }
    .book{
       visibility: hidden;
   }
 } */


/* body div{
    overflow-x: auto;
} */
html{
overflow-x: hidden;
}
/* html {
    scroll-behavior: smooth;
  } */
.nav-item{
    padding:10px 30px;

}
.activelink{
    border-bottom:2px solid black;
}
.backhead{
    position: relative;
    /* font-size: 18vw;
    color: black;
    -webkit-text-fill-color: transparent;
    -webkit-text-stroke-width: 2px;
    -webkit-text-stroke-color: black;
    opacity: 10%; */
    text-align: center;
    top: 7vh;
    left:0;
    right: 0;
    margin-left: auto;

}
.maincenter{
    overflow-x:hidden;

}
.backhead p{
    font-size: 18vw;
    font-weight: 700;

    color: black;
    -webkit-text-fill-color: transparent;
    -webkit-text-stroke-width: 2px;
    -webkit-text-stroke-color: black;
    opacity: 10% !important;
}

.myname{
    position: absolute;
    top: 40%;
    /* margin-top: -4vw; */
    font-family: BioRhyme;
    font-size: 4vw;
    left: 0;
    right: 0;
}
.description{
    margin-top: 30px;
    font-size: 3vw;
    padding:0 7vw;
    text-align: center;
}
.description span{
    padding: 5px 20px;
  background-color: black;
  color:white;
  text-align: center;
}
.container1{
    /* margin: 0px; */
    padding:0 0.5rem;
    overflow-x:hidden;

}
.subheading{
    font-size: 2.5rem;
    text-align: center;
    font-weight: 900;
    /* position: relative; */
    /* margin: 80px 80px; */
}
.subheading .backtext{
    font-size: 5vw;
    text-align: center;
    /* position: absolute; */
    left: 0;
    right: 0;
    top: 0;
    z-index: -1;
    /* opacity: 10%; */
    -webkit-text-stroke-color:black;
    -webkit-text-stroke-width: 2px;
    -webkit-text-fill-color: transparent;
     /* animation-name: expandtext;
    animation-duration: 7s;
    animation-timing-function: linear;
    animation-iteration-count: infinite;     */
}
.aboutme{
    /* margin-top: 100px !important; */
    /* background-color: #E7EEED; */
}
.intro{
    display: flex;
    flex-direction: column;
    justify-content: center;
    justify-content: center;
    height: 100%;
    padding: 10px 20px;
    /* padding: 90px 60px; */
}
.introdesc{
    margin-top: 20px;
}
.btnreadmore{
    /* text-align: center; */

}
.myimage{
    margin:0 auto;
    align-items: center;
}
.readmore{
    border: 3px solid black;
    border-radius: 0;
}
.readmore:hover{
    background-color: black;
    color: white;
}
.name{
    font-weight: 700;
    font-size: 2rem;
}
.section{
    padding-top: 15rem;
    margin-top: 3rem;
}
.images{

    padding:10px 10px
}
.images img{
    width: 100%;
}
.glide__track{
    /* height: 500px; */
    padding: 40px 0;
}
.projectslide{
    margin: 50px 0;
    background-color: #2f2f2f;
    width: 500px;
    height: 344px;
    /* width: 100%; */
    justify-content: center;
    /* margin: 0 100px; */
    transition: 0.05s ease-in;
    position: relative;
    filter: grayscale(100);
}


.projects{
    /* height: 90vh; */
}
.projectslides .glide__slide--active{
    transform: scale(1.5);
    /* margin: 0 100px; */

}

/* .testcont{
    width: 100%;
    height: 500px;
    background-color: #2f2f2f;
    margin: 50px 0 ;
    color: white;
    position: relative;
} */
.text{
    position: absolute;
    top:45%;
    -webkit-text-stroke-color:white;
    -webkit-text-stroke-width: 0.5px;
    font-size:2.5rem;
    font-weight: 700;
    right: -90px;
    
    /* animation: slide 0.9s ease-in infinite; */
}

.outline{
    color: transparent;
}
.zindex{
    color: #2f2f2f;
    z-index: 1000;

}

.slider{
    padding: 60px 0;
    padding-bottom: 0;
}

.skill{
    margin:10px 0;
}

.skillcard{
    padding:40px;

}
.cardskill{
    position: relative;
    width:100%;
    height: 300px;
    background-color: #2f2f2f;
    color: white;
    text-align: center;
    padding: 70px 40px;
    overflow: hidden;

}

/* .cardskill p{
    font-size: 1.5rem;
    font-weight: 800;
} */
.contactme{
    padding: 10px 20px;
    border-radius: 0;
    background-color: black;
    color:white;
    margin: 30px 0;
}
.contactme:hover,.contactme:active{

    background-color: black;
    color: rgba(255, 255, 255, 0.527);
    
}
.contacttext{

    font-size: 3rem;
    text-align: center;
    font-family: bioRhyme;

}
/* ... */

